generated-in/vanilla/dcimgui_nodefaultargfunctions_internal.h

typedef struct ImRect_t ImRect;            
typedef struct ImGuiTable_t ImGuiTable;                                      
typedef struct ImGuiTableColumn_t ImGuiTableColumn;                          
typedef struct ImGuiTableInstanceData_t ImGuiTableInstanceData;              
typedef struct ImGuiTableSettings_t ImGuiTableSettings;                      
typedef int ImGuiTextFlags;             
struct ImRect_t
{
    ImVec2 Min;  
    ImVec2 Max;  
};
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
struct ImGuiTableColumn_t
{
    ImGuiTableColumnFlags    Flags;                         
    float                    WidthGiven;                    
    float                    MinX;                          
    float                    MaxX;
    float                    WidthRequest;                  
    float                    WidthAuto;                     
    float                    WidthMax;                      
    float                    StretchWeight;                 
    float                    InitStretchWeightOrWidth;      
    ImRect                   ClipRect;                      
    ImGuiID                  UserID;                        
    float                    WorkMinX;                      
    float                    WorkMaxX;                      
    float                    ItemWidth;                     
    float                    ContentMaxXFrozen;             
    float                    ContentMaxXUnfrozen;
    float                    ContentMaxXHeadersUsed;        
    float                    ContentMaxXHeadersIdeal;
    ImS16                    NameOffset;                    
    ImGuiTableColumnIdx      DisplayOrder;                  
    ImGuiTableColumnIdx      IndexWithinEnabledSet;         
    ImGuiTableColumnIdx      PrevEnabledColumn;             
    ImGuiTableColumnIdx      NextEnabledColumn;             
    ImGuiTableColumnIdx      SortOrder;                     
    ImGuiTableDrawChannelIdx DrawChannelCurrent;            
    ImGuiTableDrawChannelIdx DrawChannelFrozen;             
    ImGuiTableDrawChannelIdx DrawChannelUnfrozen;           
    bool                     IsEnabled;                     
    bool                     IsUserEnabled;                 
    bool                     IsUserEnabledNextFrame;
    bool                     IsVisibleX;                    
    bool                     IsVisibleY;
    bool                     IsRequestOutput;               
    bool                     IsSkipItems;                   
    bool                     IsPreserveWidthAuto;
    ImS8                     NavLayerCurrent;               
    ImU8                     AutoFitQueue;                  
    ImU8                     CannotSkipItemsQueue;          
    ImU8                     SortDirection : 2;             
    ImU8                     SortDirectionsAvailCount : 2;  
    ImU8                     SortDirectionsAvailMask : 4;   
    ImU8                     SortDirectionsAvailList;       
};
struct ImGuiTableInstanceData_t
{
    ImGuiID TableInstanceID;
    float   LastOuterHeight;          
    float   LastTopHeadersRowHeight;  
    float   LastFrozenHeight;         
    int     HoveredRowLast;           
    int     HoveredRowNext;           
};
struct ImGuiTable_t
{
    ImGuiID                    ID;
    ImGuiTableFlags            Flags;
    void*                      RawData;                    
    ImGuiTableTempData*        TempData;                   
    ImSpan_ImGuiTableColumn    Columns;                    
    ImSpan_ImGuiTableColumnIdx DisplayOrderToIndex;        
    ImSpan_ImGuiTableCellData  RowCellData;                
    ImBitArrayPtr              EnabledMaskByDisplayOrder;  
    ImBitArrayPtr              EnabledMaskByIndex;         
    ImBitArrayPtr              VisibleMaskByIndex;         
    ImGuiTableFlags            SettingsLoadedFlags;        
    int                        SettingsOffset;             
    int                        LastFrameActive;
    int                        ColumnsCount;               
    int                        CurrentRow;
    int                        CurrentColumn;
    ImS16                      InstanceCurrent;            
    ImS16                      InstanceInteracted;         
    float                      RowPosY1;
    float                      RowPosY2;
    float                      RowMinHeight;               
    float                      RowCellPaddingY;            
    float                      RowTextBaseline;
    float                      RowIndentOffsetX;
    ImGuiTableRowFlags         RowFlags : 16;              
    ImGuiTableRowFlags         LastRowFlags : 16;
    int                        RowBgColorCounter;          
    ImU32                      RowBgColor[2];              
    ImU32                      BorderColorStrong;
    ImU32                      BorderColorLight;
    float                      BorderX1;
    float                      BorderX2;
    float                      HostIndentX;
    float                      MinColumnWidth;
    float                      OuterPaddingX;
    float                      CellPaddingX;               
    float                      CellSpacingX1;              
    float                      CellSpacingX2;
    float                      InnerWidth;                 
    float                      ColumnsGivenWidth;          
    float                      ColumnsAutoFitWidth;        
    float                      ColumnsStretchSumWeights;   
    float                      ResizedColumnNextWidth;
    float                      ResizeLockMinContentsX2;    
    float                      RefScale;                   
    float                      AngledHeadersHeight;        
    float                      AngledHeadersSlope;         
    ImRect                     OuterRect;                  
    ImRect                     InnerRect;                  
    ImRect                     WorkRect;
    ImRect                     InnerClipRect;
    ImRect                     BgClipRect;                 
    ImRect                     Bg0ClipRectForDrawCmd;      
    ImRect                     Bg2ClipRectForDrawCmd;      
    ImRect                     HostClipRect;               
    ImRect                     HostBackupInnerClipRect;    
    ImGuiWindow*               OuterWindow;                
    ImGuiWindow*               InnerWindow;                
    ImGuiTextBuffer            ColumnsNames;               
    ImDrawListSplitter*        DrawSplitter;               
    ImGuiTableInstanceData     InstanceDataFirst;
    ImVector_ImGuiTableInstanceData InstanceDataExtra;     
    ImGuiTableColumnSortSpecs  SortSpecsSingle;
    ImVector_ImGuiTableColumnSortSpecs SortSpecsMulti;     
    ImGuiTableSortSpecs        SortSpecs;                  
    ImGuiTableColumnIdx        SortSpecsCount;
    ImGuiTableColumnIdx        ColumnsEnabledCount;        
    ImGuiTableColumnIdx        ColumnsEnabledFixedCount;   
    ImGuiTableColumnIdx        DeclColumnsCount;           
    ImGuiTableColumnIdx        AngledHeadersCount;         
    ImGuiTableColumnIdx        HoveredColumnBody;          
    ImGuiTableColumnIdx        HoveredColumnBorder;        
    ImGuiTableColumnIdx        HighlightColumnHeader;      
    ImGuiTableColumnIdx        AutoFitSingleColumn;        
    ImGuiTableColumnIdx        ResizedColumn;              
    ImGuiTableColumnIdx        LastResizedColumn;          
    ImGuiTableColumnIdx        HeldHeaderColumn;           
    ImGuiTableColumnIdx        LastHeldHeaderColumn;       
    ImGuiTableColumnIdx        ReorderColumn;              
    ImGuiTableColumnIdx        ReorderColumnDstOrder;      
    ImGuiTableColumnIdx        LeftMostEnabledColumn;      
    ImGuiTableColumnIdx        RightMostEnabledColumn;     
    ImGuiTableColumnIdx        LeftMostStretchedColumn;    
    ImGuiTableColumnIdx        RightMostStretchedColumn;   
    ImGuiTableColumnIdx        ContextPopupColumn;         
    ImGuiTableColumnIdx        FreezeRowsRequest;          
    ImGuiTableColumnIdx        FreezeRowsCount;            
    ImGuiTableColumnIdx        FreezeColumnsRequest;       
    ImGuiTableColumnIdx        FreezeColumnsCount;         
    ImGuiTableColumnIdx        RowCellDataCurrent;         
    ImGuiTableDrawChannelIdx   DummyDrawChannel;           
    ImGuiTableDrawChannelIdx   Bg2DrawChannelCurrent;      
    ImGuiTableDrawChannelIdx   Bg2DrawChannelUnfrozen;
    ImS8                       NavLayer;                   
    bool                       IsLayoutLocked;             
    bool                       IsInsideRow;                
    bool                       IsInitializing;
    bool                       IsSortSpecsDirty;
    bool                       IsUsingHeaders;             
    bool                       IsContextPopupOpen;         
    bool                       DisableDefaultContextMenu;  
    bool                       IsSettingsRequestLoad;
    bool                       IsSettingsDirty;            
    bool                       IsDefaultDisplayOrder;      
    bool                       IsResetAllRequest;
    bool                       IsResetDisplayOrderRequest;
    bool                       IsUnfrozenRows;             
    bool                       IsDefaultSizingPolicy;      
    bool                       IsActiveIdAliveBeforeTable;
    bool                       IsActiveIdInTable;
    bool                       HasScrollbarYCurr;          
    bool                       HasScrollbarYPrev;          
    bool                       MemoryCompacted;
    bool                       HostSkipItems;              
};
struct ImGuiTableSettings_t
{
    ImGuiID             ID;               
    ImGuiTableFlags     SaveFlags;        
    float               RefScale;         
    ImGuiTableColumnIdx ColumnsCount;
    ImGuiTableColumnIdx ColumnsCountMax;  
    bool                WantApply;        
};
CIMGUI_API bool               ImGui_TestKeyOwner(ImGuiKey key, ImGuiID owner_id);                         
CIMGUI_API bool                 ImGui_TestShortcutRouting(ImGuiKeyChord key_chord, ImGuiID owner_id);
CIMGUI_API void  ImGui_TableOpenContextMenu(int column_n );
CIMGUI_API void  ImGui_TableSetColumnWidth(int column_n, float width);
CIMGUI_API void  ImGui_TableSetColumnSortDirection(int column_n, ImGuiSortDirection sort_direction, bool append_to_sort_specs);
CIMGUI_API int   ImGui_TableGetHoveredRow(void);                 
CIMGUI_API float ImGui_TableGetHeaderRowHeight(void);
CIMGUI_API float ImGui_TableGetHeaderAngledMaxLabelWidth(void);
CIMGUI_API void  ImGui_TablePushBackgroundChannel(void);
CIMGUI_API void  ImGui_TablePopBackgroundChannel(void);
CIMGUI_API void  ImGui_TablePushColumnChannel(int column_n);
CIMGUI_API void  ImGui_TablePopColumnChannel(void);
CIMGUI_API void                    ImGui_TableSetupDrawChannels(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableUpdateLayout(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableUpdateBorders(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableUpdateColumnsWeightFromWidth(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableMergeDrawChannels(ImGuiTable* table);
CIMGUI_API ImGuiTableInstanceData* ImGui_TableGetInstanceData(ImGuiTable* table, int instance_no);
CIMGUI_API ImGuiID                 ImGui_TableGetInstanceID(ImGuiTable* table, int instance_no);
CIMGUI_API void                    ImGui_TableSortSpecsSanitize(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableSortSpecsBuild(ImGuiTable* table);
CIMGUI_API ImGuiSortDirection      ImGui_TableGetColumnNextSortDirection(ImGuiTableColumn* column);
CIMGUI_API float                   ImGui_TableGetColumnWidthAuto(ImGuiTable* table, ImGuiTableColumn* column);
CIMGUI_API const char*             ImGui_TableGetColumnNameImGuiTablePtr(const ImGuiTable* table, int column_n);
CIMGUI_API ImGuiID                 ImGui_TableGetColumnResizeID(ImGuiTable* table, int column_n, int instance_no );
CIMGUI_API void                    ImGui_TableSetColumnWidthAutoSingle(ImGuiTable* table, int column_n);
CIMGUI_API void                    ImGui_TableSetColumnWidthAutoAll(ImGuiTable* table);
CIMGUI_API void                    ImGui_TableSetColumnDisplayOrder(ImGuiTable* table, int column_n, int dst_order);
CIMGUI_API void                    ImGui_TableQueueSetColumnDisplayOrder(ImGuiTable* table, int column_n, int dst_order);
CIMGUI_API void                    ImGui_TableRemove(ImGuiTable* table);
CIMGUI_API void                ImGui_TableLoadSettings(ImGuiTable* table);
CIMGUI_API void                ImGui_TableSaveSettings(ImGuiTable* table);
CIMGUI_API void                ImGui_TableResetSettings(ImGuiTable* table);
CIMGUI_API void                ImGui_TableSettingsAddSettingsHandler(void);
CIMGUI_API ImGuiTableSettings* ImGui_TableSettingsCreate(ImGuiID id, int columns_count);
CIMGUI_API ImGuiTableSettings* ImGui_TableSettingsFindByID(ImGuiID id);
CIMGUI_API void ImGui_TextEx(const char* text, const char* text_end , ImGuiTextFlags flags );
CIMGUI_API bool ImGui_TreeNodeBehavior(ImGuiID id, ImGuiTreeNodeFlags flags, const char* label, const char* label_end );
CIMGUI_API bool                 ImGui_TempInputIsActive(ImGuiID id);
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);