generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);
void ImGui_TeleportMousePos_wrap(ImVec2 const* pos);
bool ImGui_TempInputScalar_wrap(ImRect const* bb, ImGuiID id, const char* label, ImGuiDataType data_type, void* p_data, const char* format, const void* p_clamp_min, const void* p_clamp_max);
bool ImGui_TempInputText_wrap(ImRect const* bb, ImGuiID id, const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
void ImGui_TreeNodeDrawLineToChildNode_wrap(ImVec2 const* target_pos);