generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


imGui_TableGetCellBgRect :: (Ptr ImGuiTable) -> CInt -> IO ImRect
imGui_TableGetCellBgRect table column_n =
  alloca $ \_pOut -> c_imGui_TableGetCellBgRect table column_n _pOut >> peek _pOut

-- C: const char* ImGui::TableGetColumnName(const ImGuiTable* table, int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetColumnNameImGuiTablePtr"
  imGui_TableGetColumnNameImGuiTablePtr :: (Ptr ImGuiTable) -> CInt -> IO CString
-- C: ImGuiSortDirection ImGui::TableGetColumnNextSortDirection(ImGuiTableColumn* column)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetColumnNextSortDirection"
  imGui_TableGetColumnNextSortDirection :: (Ptr ImGuiTableColumn) -> IO ImGuiSortDirection
-- C: ImGuiID ImGui::TableGetColumnResizeID(ImGuiTable* table, int column_n, int instance_no)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetColumnResizeID"
  imGui_TableGetColumnResizeID :: (Ptr ImGuiTable) -> CInt -> CInt -> IO ImGuiID
-- C: float ImGui::TableGetColumnWidthAuto(ImGuiTable* table, ImGuiTableColumn* column)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetColumnWidthAuto"
  imGui_TableGetColumnWidthAuto :: (Ptr ImGuiTable) -> (Ptr ImGuiTableColumn) -> IO CFloat
-- C: float ImGui::TableGetHeaderAngledMaxLabelWidth()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetHeaderAngledMaxLabelWidth"
  imGui_TableGetHeaderAngledMaxLabelWidth :: IO CFloat
-- C: float ImGui::TableGetHeaderRowHeight()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetHeaderRowHeight"
  imGui_TableGetHeaderRowHeight :: IO CFloat
-- C: int ImGui::TableGetHoveredRow()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetHoveredRow"
  imGui_TableGetHoveredRow :: IO CInt
-- C: ImGuiTableInstanceData* ImGui::TableGetInstanceData(ImGuiTable* table, int instance_no)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetInstanceData"
  imGui_TableGetInstanceData :: (Ptr ImGuiTable) -> CInt -> IO (Ptr ImGuiTableInstanceData)
-- C: ImGuiID ImGui::TableGetInstanceID(ImGuiTable* table, int instance_no)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableGetInstanceID"
  imGui_TableGetInstanceID :: (Ptr ImGuiTable) -> CInt -> IO ImGuiID
-- C: void ImGui::TableLoadSettings(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableLoadSettings"
  imGui_TableLoadSettings :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableMergeDrawChannels(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableMergeDrawChannels"
  imGui_TableMergeDrawChannels :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableOpenContextMenu(int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableOpenContextMenu"
  imGui_TableOpenContextMenu :: CInt -> IO ()
-- C: void ImGui::TablePopBackgroundChannel()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TablePopBackgroundChannel"
  imGui_TablePopBackgroundChannel :: IO ()
-- C: void ImGui::TablePopColumnChannel()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TablePopColumnChannel"
  imGui_TablePopColumnChannel :: IO ()
-- C: void ImGui::TablePushBackgroundChannel()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TablePushBackgroundChannel"
  imGui_TablePushBackgroundChannel :: IO ()
-- C: void ImGui::TablePushColumnChannel(int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TablePushColumnChannel"
  imGui_TablePushColumnChannel :: CInt -> IO ()
-- C: void ImGui::TableQueueSetColumnDisplayOrder(ImGuiTable* table, int column_n, int dst_order)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableQueueSetColumnDisplayOrder"
  imGui_TableQueueSetColumnDisplayOrder :: (Ptr ImGuiTable) -> CInt -> CInt -> IO ()
-- C: void ImGui::TableRemove(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableRemove"
  imGui_TableRemove :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableResetSettings(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableResetSettings"
  imGui_TableResetSettings :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableSaveSettings(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSaveSettings"
  imGui_TableSaveSettings :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableSetColumnDisplayOrder(ImGuiTable* table, int column_n, int dst_order)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetColumnDisplayOrder"
  imGui_TableSetColumnDisplayOrder :: (Ptr ImGuiTable) -> CInt -> CInt -> IO ()
-- C: void ImGui::TableSetColumnSortDirection(int column_n, ImGuiSortDirection sort_direction, bool append_to_sort_specs)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetColumnSortDirection"
  imGui_TableSetColumnSortDirection :: CInt -> ImGuiSortDirection -> CBool -> IO ()
-- C: void ImGui::TableSetColumnWidth(int column_n, float width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetColumnWidth"
  imGui_TableSetColumnWidth :: CInt -> CFloat -> IO ()
-- C: void ImGui::TableSetColumnWidthAutoAll(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetColumnWidthAutoAll"
  imGui_TableSetColumnWidthAutoAll :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableSetColumnWidthAutoSingle(ImGuiTable* table, int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetColumnWidthAutoSingle"
  imGui_TableSetColumnWidthAutoSingle :: (Ptr ImGuiTable) -> CInt -> IO ()
-- C: void ImGui::TableSettingsAddSettingsHandler()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSettingsAddSettingsHandler"
  imGui_TableSettingsAddSettingsHandler :: IO ()
-- C: ImGuiTableSettings* ImGui::TableSettingsCreate(ImGuiID id, int columns_count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSettingsCreate"
  imGui_TableSettingsCreate :: ImGuiID -> CInt -> IO (Ptr ImGuiTableSettings)
-- C: ImGuiTableSettings* ImGui::TableSettingsFindByID(ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSettingsFindByID"
  imGui_TableSettingsFindByID :: ImGuiID -> IO (Ptr ImGuiTableSettings)
-- C: void ImGui::TableSetupDrawChannels(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSetupDrawChannels"
  imGui_TableSetupDrawChannels :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableSortSpecsBuild(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSortSpecsBuild"
  imGui_TableSortSpecsBuild :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableSortSpecsSanitize(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableSortSpecsSanitize"
  imGui_TableSortSpecsSanitize :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableUpdateBorders(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableUpdateBorders"
  imGui_TableUpdateBorders :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableUpdateColumnsWeightFromWidth(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableUpdateColumnsWeightFromWidth"
  imGui_TableUpdateColumnsWeightFromWidth :: (Ptr ImGuiTable) -> IO ()
-- C: void ImGui::TableUpdateLayout(ImGuiTable* table)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TableUpdateLayout"
  imGui_TableUpdateLayout :: (Ptr ImGuiTable) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_TeleportMousePos_wrap"
  c_imGui_TeleportMousePos :: (Ptr ImVec2) -> IO ()

imGui_TeleportMousePos :: ImVec2 -> IO ()
imGui_TeleportMousePos pos =
  with pos $ \_p0 -> c_imGui_TeleportMousePos _p0

-- C: bool ImGui::TempInputIsActive(ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TempInputIsActive"
  imGui_TempInputIsActive :: ImGuiID -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_TempInputScalar_wrap"
  c_imGui_TempInputScalar :: (Ptr ImRect) -> ImGuiID -> CString -> ImGuiDataType -> (Ptr ()) -> CString -> (Ptr ()) -> (Ptr ()) -> IO CBool

imGui_TempInputScalar :: ImRect -> ImGuiID -> CString -> ImGuiDataType -> (Ptr ()) -> CString -> (Ptr ()) -> (Ptr ()) -> IO CBool
imGui_TempInputScalar bb id_ label data_type p_data format p_clamp_min p_clamp_max =
  with bb $ \_p0 -> c_imGui_TempInputScalar _p0 id_ label data_type p_data format p_clamp_min p_clamp_max

foreign import capi unsafe "DearImGuiWrappers.h ImGui_TempInputText_wrap"
  c_imGui_TempInputText :: (Ptr ImRect) -> ImGuiID -> CString -> (Ptr CChar) -> CSize -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool

imGui_TempInputText :: ImRect -> ImGuiID -> CString -> (Ptr CChar) -> CSize -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool
imGui_TempInputText bb id_ label buf buf_size flags callback user_data =
  with bb $ \_p0 -> c_imGui_TempInputText _p0 id_ label buf buf_size flags callback user_data

-- C: bool ImGui::TestKeyOwner(ImGuiKey key, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TestKeyOwner"
  imGui_TestKeyOwner :: ImGuiKey -> ImGuiID -> IO CBool
-- C: bool ImGui::TestShortcutRouting(ImGuiKeyChord key_chord, ImGuiID owner_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TestShortcutRouting"
  imGui_TestShortcutRouting :: ImGuiKeyChord -> ImGuiID -> IO CBool
-- C: void ImGui::TextEx(const char* text, const char* text_end, ImGuiTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TextEx"
  imGui_TextEx :: CString -> CString -> ImGuiTextFlags -> IO ()
-- C: bool ImGui::TreeNodeBehavior(ImGuiID id, ImGuiTreeNodeFlags flags, const char* label, const char* label_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TreeNodeBehavior"
  imGui_TreeNodeBehavior :: ImGuiID -> ImGuiTreeNodeFlags -> CString -> CString -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_TreeNodeDrawLineToChildNode_wrap"
  c_imGui_TreeNodeDrawLineToChildNode :: (Ptr ImVec2) -> IO ()

imGui_TreeNodeDrawLineToChildNode :: ImVec2 -> IO ()
imGui_TreeNodeDrawLineToChildNode target_pos =
  with target_pos $ \_p0 -> c_imGui_TreeNodeDrawLineToChildNode _p0
